# bsv-bank

./: .env.example  .gitignore  CANONICAL.md  CONSISTENCY_PROTOCOL.md  FUNCTIONS_REGISTRY.md  IMPLEMENTATION_GUIDE.md  LAUNCH_STRATEGY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_IMPLEMENTATION_GUIDE.md  PHASE4_QUICKREF.md  PHASE4_SPECIFICATION.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_QUICKSTART.md  PHASE5_TESTNET_PLAN.md  PHASE6_ARCHITECTURE.md  PHASE6_IMPLEMENTATION.md  PHASE6_PLAN.md  QUICKSTART.md  README.md  STATUS.md  STATUS_NEW.md  TESTING.md  analyze_functions.sh  check-database-after-migration.sh  check-database-before-migration.sh  check-phase6.md  code-intelligence-audit.sh  code-review-audit.sh  comprehensive-security-audit.sh  docker-compose.yml  functions.md  ports.md  quick-service-status.sh  quick-test.sh  setup-phase4.sh  start-all.sh  start.sh  stop-all.sh  stop.sh  (+9 more)
contracts/: script-templates.js
contracts/deposit/: time_locked.script
contracts/lending/: loan-scripts.js
core/blockchain-monitor/: Cargo.toml
core/blockchain-monitor/src/: main.rs
core/bsv-node/: Cargo.toml
core/bsv-node/src/: lib.rs
core/common/: Cargo.toml
core/common/src/: auth.rs  cache.rs  config.rs  error.rs  health.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  rate_limit.rs  retry.rs  validation.rs
core/deposit-service/: Cargo.toml
core/deposit-service/src/: auth.rs  blockchain_integration.rs  database.rs  main.rs  node_integration.rs  validation.rs
core/deposit-service/src/handlers/: auth.rs  health.rs  metrics.rs  mod.rs
core/deposit-service/src/middleware/: auth.rs  metrics.rs  mod.rs
core/interest-engine/: Cargo.toml
core/interest-engine/src/: main.rs
core/lending-service/: Cargo.toml
core/lending-service/src/: main.rs
core/payment-channel-service/: Cargo.toml
core/payment-channel-service/src/: main.rs
core/spv-service/: Cargo.toml
core/spv-service/src/: main.rs
core/transaction-builder/: Cargo.toml
core/transaction-builder/src/: main.rs
db/: run_migrations.sh
db/migrations/: 001_initial_schema.sql  002_loans_schema.sql  003_payment_channels.sql  004_phase5_schema.sql  007_users_and_auth.sql
docs/: architecture.html
frontend/: config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.js.backup
frontend/src/components/: LoanHistory.css  LoanHistory.js  LoanHistory.tsx  PaymentChannels.js
frontend/src/services/: handcash.js
scripts/: build-phase5.sh  check-phase5-status.sh  start-phase5-services.sh  stop-phase5-services.sh
sdk/js/: package.json
sdk/js/src/: client.ts
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  deposits.rs
