[package]
name = "bsv-node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

[lib]
name = "bsv_node"
path = "src/lib.rs"
