[package]
name = "bsv-bank-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT Authentication
jsonwebtoken = "9.2"
sha2 = "0.10"
hex = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }

# Redis (optional)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Validation
regex = "1.10"

# HTTP client (for circuit breaker)
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3.31"

[features]
default = []
redis-cache = ["redis"]

[dev-dependencies]
tokio-test = "0.4"
