[package]
name = "deposit-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Phase 6: Common library (provides auth, validation, metrics, logging, health)
bsv-bank-common = { path = "../common" }

# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography (for commitment hashes)
sha2 = "0.10"
hex = "0.4"

# HTTP client (for BSV node integration)
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Prometheus metrics
prometheus = "0.13"

# Phase 6: Error handling
thiserror = "1.0"

# JWT (via common, keeping for compatibility)
jsonwebtoken = "9"

# Troubleshoot for handlers/metrics, middleware/auth, middleware/metrics
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"