[package]
name = "payment-channel-service"
version = "1.0.0"
edition = "2021"
authors = ["BSV Bank Team"]
description = "Payment channel service for instant micropayments"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }

# Hashing for channel IDs
sha2 = "0.10"

# Environment variables
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1