[package]
name = "payment-channel-service"
version = "1.0.0"
edition = "2021"
authors = ["BSV Bank Team"]
description = "Payment channel service for instant micropayments"

[dependencies]
# Phase 6: Common library with auth, validation, metrics
bsv-bank-common = { path = "../common" }

# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }
bigdecimal = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }

# Cryptography
sha2 = "0.10"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Prometheus metrics
prometheus = "0.13"

# Phase 6: Error handling
thiserror = "1.0"

# JWT (via common, but keeping for compatibility)
jsonwebtoken = "9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1