[package]
name = "transaction-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
env_logger = "0.11"
log = "0.4"